<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_settings"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/textViewListConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textColor="@color/darkPurple"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewReturnList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/return_list"
        android:textAlignment="center"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/baseline_move_down_24" />

    <LinearLayout
        android:id="@+id/linearLayoutSetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_list"
            android:textColor="@color/darkGrey"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputSetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password"
                android:importantForAccessibility="no"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPassword"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/buttonSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_border">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/background_button"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/buttonCopyTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/press_to_copy"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/baseline_content_copy_24" />

        <TextView
            android:id="@+id/textViewChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text="@string/changedPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/baseline_key_24" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_todo"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNumberList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/number_list"
            android:importantForAccessibility="no"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textEmailAddress"
            android:textColor="@color/darkGrey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPasswordList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password"
            android:importantForAccessibility="no"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textPassword"
            android:textColor="@color/darkGrey"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/buttonConnectTodolist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_border">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/background_button"
            android:padding="10dp">

            <TextView
                android:id="@+id/buttonConnectTodolistText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_todo"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
