<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivityBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_purpless"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewLoginBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_login" />

    <ImageView
        android:id="@+id/imageViewLoginLogo"
        android:layout_width="203dp"
        android:layout_height="129dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLoginBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:srcCompat="@drawable/logo_tds" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="43dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoginLogo">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/darkGrey"
                android:textSize="20sp"
                android:importantForAutofill="noExcludeDescendants"
                android:importantForAccessibility="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:autofillHints=""
            android:importantForAutofill="no"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/darkGrey"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/darkPurple"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="46dp"
            android:background="@drawable/button_border">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@drawable/background_button">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttonGoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/background_button_google"
            android:orientation="horizontal"
            android:paddingStart="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/googleg_standard_color_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:text="@string/google"
                android:textColor="@color/lightGrey"
                android:textSize="26sp" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/createAccountUnderline"
        android:textColor="@color/darkPurple"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>