<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_settings"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textColor="@color/darkPurple"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/language"
        android:textColor="@color/darkPurple"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buttonLanguageRu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_button"
            android:padding="10dp"
            android:text="RU"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buttonLanguageEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:padding="10dp"
            android:text="EN"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/theme"
        android:textColor="@color/darkPurple"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/buttonThemePurpless"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_purpless"
            android:padding="6dp"
            android:src="@drawable/baseline_done_24" />

        <ImageView
            android:id="@+id/buttonThemeDark"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_dark"
            android:padding="6dp" />

        <ImageView
            android:id="@+id/buttonThemeGreen"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_green"
            android:padding="6dp" />

        <ImageView
            android:id="@+id/buttonThemeBlue"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_blue"
            android:padding="6dp" />
    </LinearLayout>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_todo_list"
        android:textColor="@color/darkPurple"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewTodolist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3vIRtdewzpfGBjxupPGbntcIay92"
            android:textColor="@color/darkGrey"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/buttonCopyTodo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/content"
            android:padding="5dp"
            android:src="@drawable/baseline_content_copy_24" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_todo"
        android:textColor="@color/darkPurple"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/type_todo"
        android:minHeight="48dp"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />
-->
    <RelativeLayout
        android:id="@+id/buttonConnectTodolist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_border">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/background_button"
            android:padding="10dp">

            <TextView
                android:id="@+id/buttonConnectTodolistText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_todo"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_border">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/background_button_exit"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escape"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
